@@ -4,6 +4,8 @@ Changes in Shorewall 4.4.3
 
 2)  Fix 'routeback' in /etc/shorewall/routestopped.
 
+3)  Rename 'object' to 'script' in compiler and config modules.
+
 Changes in Shorewall 4.4.2
 
 1)  BUGFIX: Correct detection of Persistent SNAT support
